Some things have been added and some improvements have been made to the Home page and the comments in the project have been modified.

--- a/DD/style.css
+++ b/DD/style.css
@@ -1,8 +1,7 @@
-/* Neves Team Project */
-
-
-
-/* You are now on the Home page */
+/* ( Neves Team Project )
+   ===============================================================
+   You are now in the design section page layout file
+   =============================================================== */
 
 
 
