--- a/PD/style.css
+++ b/PD/style.css
@@ -1,8 +1,7 @@
-/* Neves Team Project */
-
-
-
-/* You are now on the programming section page */
+/* ( Neves Team Project )
+   ===============================================================
+   You are now in the team section page layout file.
+   =============================================================== */
 
 
 
