--- a/Team/style.css
+++ b/Team/style.css
@@ -1,8 +1,7 @@
-/* Neves Team Project */
-
-
-
-/* You are now on the team page */
+/* ( Neves Team Project )
+   ===============================================================
+   You are now in the team page layout file.
+   =============================================================== */
 
 
 
