--- a/WWA/style.css
+++ b/WWA/style.css
@@ -1,8 +1,7 @@
-/* Neves Team Project */
-
-
-
-/* Y<!-- You are now on the About Us page --> */
+/* ( Neves Team Project )
+   ===============================================================
+   You are now in the About Us page format file.
+   =============================================================== */
 
 
 
