--- a/style.css
+++ b/style.css
@@ -1,8 +1,7 @@
-/* Neves Team Project */
-
-
-
-/* You are now on the Home page */
+/* ( Neves Team Project )
+   ===============================================================
+   You are now in the home page layout file.
+   =============================================================== */
 
 
 
@@ -40,9 +39,8 @@
     --c00edff: #00edff;
     --transparent: transparent;
     --rbgaWhite: rgba(255, 255, 255, 0.5);
-    --rbgaWhiteVeryTransparent: rgba(255, 255, 255, 0.09);
     --rbgaBlack: rgba(0, 0, 0, 0.5);
-    --rbgaBlackSlightlyTransparent: rgba(0, 0, 0, 0.3);
+    --forHeaderOnly: rgba(255, 255, 255, 0.09);
 }
 
 /* The body */
@@ -185,9 +183,16 @@ main div.box-int div.box-go {
     margin-top: 20px;
 }
 
-main div.box-int div.box-go a {
+main div.box-int div.box-go li {
     width: 170px;
     height: 40px;
+    list-style: none;
+}
+
+main div.box-int div.box-go li a {
+    width: 170px;
+    height: 40px;
+    overflow: hidden;
     display: block;
     transition: all 0.5s ease;
     border-radius: 20px;
@@ -195,6 +200,7 @@ main div.box-int div.box-go a {
     text-align: center;
     line-height: 40px;
     font-weight: bold;
+    position: relative;
     color: var(--balck, black);
     box-shadow: 0 0 25px 0px var(--c00edff, #00edff);
     background-color: var(--c00edff, #00edff);
@@ -202,9 +208,28 @@ main div.box-int div.box-go a {
     /* Arabic - 1 */
 }
 
-main div.box-int div.box-go a:hover {
+main div.box-int div.box-go li a:hover {
+    transform: translateY(-5px);
     color: var(--white, white);
     box-shadow: 0 0 25px 10px var(--c00edff, #00edff);
+}
+
+main div.box-int div.box-go a::before {
+    content: "";
+    width: 100%;
+    height: 100%;
+    transform: rotate(120deg);
+    transition: all 0.5s ease;
+    position: absolute;
+    top: 0;
+    left: -170px;
+    background-color: var(--white, white);
+}
+
+main div.box-int div.box-go li:hover a::before {
+    position: absolute;
+    top: 0;
+    left: 170px;
 }
 
 main div.box-imge {
@@ -335,7 +360,7 @@ main div.box-imge img {
 
 svg.svg-1 {
     position: relative;
-    bottom: -10px;
+    bottom: -5px;
 }
 
 /* The section - 1 */
@@ -361,6 +386,7 @@ section.section-1 div.co-contents div.box-title h1 {
     margin-left: 20px;
     color: var(--c00edff, #00edff);
     font-family: "Zain";
+    /* Arabic - 1 */
 }
 
 section.section-1 div.co-contents div.box-title p {
@@ -369,6 +395,7 @@ section.section-1 div.co-contents div.box-title p {
     opacity: 0.5;
     color: var(--white, white);
     font-family: "Zain";
+    /* Arabic - 1 */
 }
 
 section.section-1 div.co-contents div.box-contents {
@@ -385,7 +412,7 @@ section.section-1 div.co-contents div.box-contents div.box-content {
     display: flex;
     opacity: 0;
     border-radius: 10px;
-    box-shadow: -15px 15px 25px 10px var(--rbgaBlack, rgba(0,0,0,0.5));
+    box-shadow: -15px 15px 25px 10px var(--rbgaBlack, rgba(0, 0, 0, 0.5));
     background-color: var(--c1f232d, #1f232d);
 }
 
@@ -414,6 +441,7 @@ section.section-1 div.co-contents div.box-contents div.box-content div.box-name 
     text-shadow: 0 0 25px var(--white, white);
     color: var(--white, white);
     font-family: "Zain";
+    /* Arabic - 1 */
 }
 
 /* Animation Section */
@@ -503,6 +531,7 @@ section.section-2 div.co-contents div.box-title h1 {
     text-align: center;
     color: var(--c00edff, #00edff);
     font-family: "Zain";
+    /* Arabic - 1 */
 }
 
 section.section-2 div.co-contents div.box-contents {
@@ -533,11 +562,13 @@ section.section-2 div.co-contents div.box-contents div.box-content div.box-featu
     font-size: 40px;
     color: var(--white, white);
     font-family: "Zain";
+    /* Arabic - 1 */
 }
 
 section.section-2 div.co-contents div.box-contents div.box-content div.box-features p {
     color: var(--white, white);
     font-family: "Zain";
+    /* Arabic - 1 */
 }
 
 section.section-2 div.co-contents div.box-contents div.box-content div.box-imge {
@@ -551,7 +582,7 @@ section.section-2 div.co-contents div.box-contents div.box-content div.box-imge 
 section.section-2 div.co-contents div.box-contents div.box-content div.box-imge img {
     width: 80%;
     transition: all 0.5s ease;
-    filter: drop-shadow(-25px 25px 25px var(--rbgaBlack, rgba(0,0,0,0.5)));
+    filter: drop-shadow(-25px 25px 25px var(--rbgaBlack, rgba(0, 0, 0, 0.5)));
 }
 
 section.section-2 div.co-contents div.box-contents div.box-content div.box-imge img.top-right {
@@ -651,6 +682,7 @@ section.section-3 div.co-contents div.box-title h1 {
     text-align: center;
     color: var(--c00edff, #00edff);
     font-family: "Zain";
+    /* Arabic - 1 */
 }
 
 section.section-3 div.co-contents div.box-contents {
@@ -666,7 +698,7 @@ section.section-3 div.co-contents div.box-contents div.box-content {
     width: 300px;
     height: 400px;
     border-radius: 10px;
-    box-shadow: -25px 25px 25px 10px var(--rbgaBlack, rgba(0,0,0,0.5));
+    box-shadow: -25px 25px 25px 10px var(--rbgaBlack, rgba(0, 0, 0, 0.5));
     background-color: var(--c1f232d, #1f232d);
 }
 
@@ -685,7 +717,7 @@ section.section-3 div.co-contents div.box-contents div.box-content div.box-imge 
 }
 
 section.section-3 div.co-contents div.box-contents div.box-content div.box-imge img:hover {
-    transform: scale(1.5,1.5) rotate(10deg);
+    transform: scale(1.5, 1.5) rotate(10deg);
 }
 
 section.section-3 div.co-contents div.box-contents div.box-content-2 div.box-imge img {
@@ -702,12 +734,14 @@ section.section-3 div.co-contents div.box-contents div.box-content div.box-text 
     text-align: center;
     color: var(--white, white);
     font-family: "Zain";
+    /* Arabic - 1 */
 }
 
 section.section-3 div.co-contents div.box-content div.box-text p {
     text-align: center;
     color: var(--white, white);
     font-family: "Zain";
+    /* Arabic - 1 */
 }
 
 section.section-3 div.co-contents div.box-content div.box-btn {
@@ -737,6 +771,7 @@ section.section-3 div.co-contents div.box-content div.box-btn li a {
     color: var(--white, white);
     background-color: var(--c313743, #313743);
     font-family: "Zain";
+    /* Arabic - 1 */
 }
 
 section.section-3 div.co-contents div.box-content div.box-btn li:hover a::before {
@@ -764,6 +799,7 @@ section.section-3 div.co-contents div.box-content div.box-btn a::before {
     color: var(--white, white);
     background-color: var(--white, white);
     font-family: "Zain";
+    /* Arabic - 1 */
 }
 
 /* Animation Section-3 */
@@ -817,6 +853,48 @@ section.section-3 div.co-contents div.box-content div.box-btn a::before {
 @media (max-width: 400px) {
     section.section-3 div.co-contents div.box-contents div.box-content {
         width: 90%;
+    }
+}
+
+/* The Train */
+div.train {
+    width: 50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    top: 50%;
+    right: 20px;
+    transform: translateY(-50%);
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border-radius: 10px;
+    gap: 20px;
+    background-color: var(--c1f232d, #1f232d);
+}
+
+div.train button {
+    all: unset;
+    cursor: pointer;
+    color: var(--white, white);
+}
+
+/* Responsive Train */
+@media (max-width: 500px) {
+    div.train {
+        background-color: var(--rbgaBlack, rgba(0,0,0,0.5));
+    }
+}
+
+@media (max-height: 500px) {
+    div.train {
+        width: 250px;
+        height: 50px;
+        flex-direction: row;
+        top: 90%;
+        left: 50%;
+        padding: 0 10px 0 10px;
     }
 }
 
